--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -26,8 +26,8 @@ http {
 
     server {
         listen ${LISTEN_PORT_SSL} ssl;
-        ssl_certificate     /etc/nginx/ssl.crt;
-        ssl_certificate_key /etc/nginx/ssl.key;
+        ssl_certificate     /etc/nginx/certs/ssl.crt;
+        ssl_certificate_key /etc/nginx/certs/ssl.key;
 
         location / {
             proxy_pass         http://docker-target;
