--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -12,15 +12,7 @@ http {
 
     server {
         listen ${LISTEN_PORT};
-
-        location / {
-            proxy_pass         http://docker-target;
-            proxy_redirect     off;
-            proxy_set_header   Host $host;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
+	return 301 https://$host$request_uri;
     }
 
 
