--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -29,5 +29,12 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
+	location /server-status {
+        stub_status on;
+        access_log   off;
+        allow ${STATUS_IP}
+        deny all;
+	}
+ 
     }
 }
