--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -33,6 +33,8 @@ http {
         stub_status on;
         access_log   off;
         allow ${STATUS_IP};
+        allow localhost;
+        allow 127.0.0.1;
         deny all;
 	}
  
