--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -21,6 +21,8 @@ http {
         ssl_certificate     /etc/nginx/certs/ssl.crt;
         ssl_certificate_key /etc/nginx/certs/ssl.key;
 
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
         location / {
             proxy_pass         http://docker-target;
             proxy_redirect     off;
