Add server name config

--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -12,12 +12,14 @@ http {
 
     server {
         listen ${LISTEN_PORT};
+	server_name ${SERVER_NAME};
 	return 301 https://$host$request_uri;
     }
 
 
     server {
         listen ${LISTEN_PORT_SSL} ssl;
+	server_name ${SERVER_NAME};
         ssl_certificate     /etc/nginx/certs/ssl.crt;
         ssl_certificate_key /etc/nginx/certs/ssl.key;
 
