--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -30,7 +30,7 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-	return 301 https://$host$request_uri;
+	return 301 https://${SERVER_NAME}$request_uri;
     }
     
 
