--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -19,7 +19,7 @@ http {
     server {
         listen ${LISTEN_PORT};
 	server_name www.${SERVER_NAME};
-	return 301 https://${SERVER_NAME}$request_uri;
+	return 301 https://$host$request_uri;
     }
     
     server {
@@ -30,7 +30,7 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-	return 301 https://${SERVER_NAME}$request_uri;
+	return 301 https://$host$request_uri;
     }
     
 
