--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -25,7 +25,7 @@ http {
 
     server {
         listen ${LISTEN_PORT_SSL} ssl;
-	server_name ${SERVER_NAME};
+	server_name www.${SERVER_NAME};
         ssl_certificate     /etc/nginx/certs/ssl.crt;
         ssl_certificate_key /etc/nginx/certs/ssl.key;
         return 301 https://${SERVER_NAME}$request_uri;
