--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -47,14 +47,33 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
+    }
+    
+    server {
+        listen ${LISTEN_PORT} default_server;
+	server_name _;
 	location /server-status {
-        stub_status on;
-        access_log   off;
-        allow ${STATUS_IP};
-	allow 172.20.0.0/16;
-        allow 127.0.0.1;
-        deny all;
+	    stub_status on;
+            access_log on;
+	    allow ${STATUS_IP};
+	    allow 172.20.0.0/16;
+	    allow 127.0.0.1;
+	    deny all;
 	}
- 
+    }
+    
+    server {
+        listen ${LISTEN_PORT_SSL} default_server ssl;
+	server_name _;
+	ssl_certificate     /etc/nginx/certs/ssl.crt;
+        ssl_certificate_key /etc/nginx/certs/ssl.key;
+	location /server-status {
+	    stub_status on;
+            access_log on;
+	    allow ${STATUS_IP};
+	    allow 172.20.0.0/16;
+	    allow 127.0.0.1;
+	    deny all;
+	}
     }
 }
