--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -37,6 +37,9 @@ http {
         ssl_certificate     /etc/nginx/certs/ssl.crt;
         ssl_certificate_key /etc/nginx/certs/ssl.key;
 
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
         location / {
@@ -46,6 +49,9 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_set_header   X-Forwarded-Proto http;
+	    proxy_set_header   X-Nginx-Proxy true;
+	    
         }
     }
     
